flussi funzionanti, manca la logica sul client
